<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nvHome"
        android:icon="@drawable/ic_home"
        android:orderInCategory="1"
        android:menuCategory="secondary"
        android:title="@string/str_home" />

    <item
        android:id="@+id/nvProfile"
        android:icon="@drawable/ic_user"
        android:orderInCategory="2"
        android:menuCategory="secondary"
        android:title="@string/str_profile" />

    <item
        android:id="@+id/nvIncentive"
        android:icon="@drawable/ic_gift"
        android:orderInCategory="3"
        android:menuCategory="secondary"
        android:title="@string/str_incentive" />

    <item
        android:id="@+id/nvCart"
        android:icon="@drawable/ic_shopping_bag"
        android:orderInCategory="4"
        android:menuCategory="secondary"
        android:title="@string/str_cart" />

</menu>